# scrap-a-job-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py  secrets.template.env
app/: configs.py  crud.py  main.py  models.py  parser.py  schemas.py  scraper.py  scrapers.py  utils.py
docker/: .dockerignore  Dockerfile  docker-compose.yml
src/: alembic.ini  run.py
src/api/: database.py  main.py  models.py  schemas.py
src/api/cruds/: job_add_crud.py
src/api/database/: config.py  database.py
src/api/models/: job_add_model.py
src/api/routers/: job_add_router.py
src/api/schemas/: job_add_schemas.py  website_names.py
src/api/scraping/: __init__.py  configs.py  scrape_config.yml  scrapers.py
src/api/scraping/scrapers/: __init__.py  academicwork.py  base_scraper.py  jobup.py
src/api/v1/: crud.py  router.py
src/app/: database.py  main.py  models.py  schemas.py
src/app/scraping/: scrapers.py
src/app/v1/: crud.py  router.py
src/migrations/: env.py
src/migrations/versions/: ff9a39e93e90_first_revision.py
